B-F Sandbox Full-Backup/src/objects/Banner_Groups__c.object
<CustomObject>
    <fields>
        <fullName>Banner_Group_Description__c</fullName>
        <description>Banner Group Description</description>
        <label>Banner Group Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Customer Number - ECC</description>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <description>Store existing BannerGroup code</description>
        <label>Legacy Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ownership Group</description>
        <label>Ownership Group</label>
        <referenceTo>Banner_Groups__c</referenceTo>
        <relationshipLabel>Banner Groups</relationshipLabel>
        <relationshipName>Banner_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <description>Sales Organization</description>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Banner Group</label>
    <listViews>
        <fullName>Banner_Management_Group</fullName>
        <columns>NAME</columns>
        <columns>Ownership_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>ZMG</value>
        </filters>
        <label>Banner Management Group</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ECC_Banner_Group</fullName>
        <columns>Ownership_Group__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>Sandeep</value>
        </filters>
        <label>ECC - Banner Group</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Banner Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banner Groups</pluralLabel>
    <recordTypes>
        <fullName>AUD_Banner_Groups</fullName>
        <active>true</active>
        <description>For Australia Banner Groups</description>
        <label>AUD - Banner Groups</label>
    </recordTypes>
    <recordTypes>
        <fullName>CHN_Banner_Groups</fullName>
        <active>true</active>
        <description>For Chinese Banner Groups</description>
        <label>CHN - Banner Groups</label>
    </recordTypes>
    <recordTypes>
        <fullName>DEU_Banner_Groups</fullName>
        <active>true</active>
        <description>For German Banner Groups</description>
        <label>DEU - Banner Groups</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>